# VidlingoTauri

./: package-lock.json  package.json
src/: App.css  App.tsx  Player.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
