[package]
name = "Vidlingo" 
version = "0.1.0"
description = "Vidlingo"
authors = ["James"]
edition = "2025"


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "path-all", "shell-execute", "fs-read-file"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dirs = "5.0" # استفاده از نسخه جدیدتر

[features]
custom-protocol = ["tauri/custom-protocol"]